@@ -9,6 +9,7 @@ import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -435,7 +436,7 @@ public class ServerInfoMenu extends BaseMenu {
             if (part.isEmpty()) {
                 continue;
             }
-            if (!builder.isEmpty()) {
+            if (builder.length() != 0) {
                 builder.append(' ');
             }
             builder.append(Character.toUpperCase(part.charAt(0)));
@@ -443,7 +444,7 @@ public class ServerInfoMenu extends BaseMenu {
                 builder.append(part.substring(1));
             }
         }
-        return builder.isEmpty() ? "Info" : builder.toString();
+        return builder.length() == 0 ? "Info" : builder.toString();
     }
 
     private enum ActionType {
@@ -462,13 +463,13 @@ public class ServerInfoMenu extends BaseMenu {
                                 10,
                                 Material.BOOK,
                                 "&#00A4FCStart here",
-                                List.of(
+                                Arrays.asList(
                                         "&f1. Use &b/rtp &fto leave spawn.",
                                         "&f2. Gather wood, food, and iron.",
                                         "&f3. Build a safe base.",
                                         "&f4. Save it with &b/sethome&f."
                                 ),
-                                ButtonAction.info(List.of(
+                                ButtonAction.info(Arrays.asList(
                                         "&7Start with &f/rtp &7to find land away from spawn.",
                                         "&7After building a base, save it with &f/sethome&7."
                                 ))
@@ -477,7 +478,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 11,
                                 Material.GOLD_INGOT,
                                 "&#00A4FCMake " + moneyPlural,
-                                List.of(
+                                Arrays.asList(
                                         "&fSell blocks, ores, and drops with",
                                         "&b/Sell &for list items in &b/auctionhouse&f.",
                                         "",
@@ -489,7 +490,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 12,
                                 Material.RED_BED,
                                 "&#00A4FCHomes",
-                                List.of(
+                                Arrays.asList(
                                         "&fUse &b/sethome <name> &fto save",
                                         "&fImportant places.",
                                         "",
@@ -501,7 +502,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 13,
                                 Material.IRON_HELMET,
                                 "&#00A4FCTeams",
-                                List.of(
+                                Arrays.asList(
                                         "&fPlay with friends, share a base,",
                                         "&fAnd manage team permissions.",
                                         "",
@@ -513,14 +514,14 @@ public class ServerInfoMenu extends BaseMenu {
                                 14,
                                 Material.DIAMOND_SWORD,
                                 "&#00A4FCCombat tips",
-                                List.of(
+                                Arrays.asList(
                                         "&fDying is punishing because",
                                         "&fKeepinventory is turned off.",
                                         "",
                                         "&#00A4FCTip: &favoid risky fights",
                                         "&fUntil you are geared."
                                 ),
-                                ButtonAction.info(List.of(
+                                ButtonAction.info(Arrays.asList(
                                         "&7You drop your items on death here, so gear up before taking big fights.",
                                         "&7Keep backup armor and food if you plan to PvP often."
                                 ))
@@ -529,7 +530,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 15,
                                 Material.COMPASS,
                                 "&#00A4FCSpawn",
-                                List.of(
+                                Arrays.asList(
                                         "&fReturn to spawn when you need",
                                         "&fShops, safety, or a reset.",
                                         "",
@@ -541,7 +542,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 16,
                                 Material.OAK_SAPLING,
                                 "&#00A4FCRTP guide",
-                                List.of(
+                                Arrays.asList(
                                         "&fUse RTP when spawn feels crowded",
                                         "&fOr you need fresh land.",
                                         "",
@@ -564,7 +565,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 10,
                                 Material.EMERALD,
                                 "&#00A4FCShop",
-                                List.of(
+                                Arrays.asList(
                                         "&fBuy useful items, blocks,",
                                         "&fAnd starter gear.",
                                         "",
@@ -576,7 +577,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 11,
                                 Material.CHEST,
                                 "&#00A4FCSell",
-                                List.of(
+                                Arrays.asList(
                                         "&fTurn farmed or mined items",
                                         "&fInto quick " + moneyPlural + ".",
                                         "",
@@ -588,14 +589,14 @@ public class ServerInfoMenu extends BaseMenu {
                                 12,
                                 Material.ENDER_PEARL,
                                 "&#00A4FCTeleport requests",
-                                List.of(
+                                Arrays.asList(
                                         "&fUse &b/tpa <player> &for",
                                         "&b/tpahere <player>&f.",
                                         "",
                                         "&#00A4FCTip: &fonly teleport to",
                                         "&fPeople you trust."
                                 ),
-                                ButtonAction.info(List.of(
+                                ButtonAction.info(Arrays.asList(
                                         "&7Use &f/tpa <player> &7to request teleporting to them.",
                                         "&7Use &f/tpahere <player> &7if you want them to come to you."
                                 ))
@@ -604,7 +605,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 13,
                                 Material.CLOCK,
                                 "&#00A4FCLeaderboards",
-                                List.of(
+                                Arrays.asList(
                                         "&fCheck who is leading in",
                                         "&f" + moneyPlural + ", kills, and more.",
                                         "",
@@ -616,7 +617,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 14,
                                 Material.GRAY_DYE,
                                 "&#00A4FCSettings",
-                                List.of(
+                                Arrays.asList(
                                         "&fToggle personal options like",
                                         "&fAlerts and menu preferences.",
                                         "",
@@ -628,7 +629,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 15,
                                 Material.KNOWLEDGE_BOOK,
                                 "&#00A4FCRules",
-                                List.of(
+                                Arrays.asList(
                                         "&fRead the rules before grinding",
                                         "&fOr trading with players.",
                                         "",
@@ -640,7 +641,7 @@ public class ServerInfoMenu extends BaseMenu {
                                 16,
                                 Material.PINK_DYE,
                                 "&#00A4FCSocial & media",
-                                List.of(
+                                Arrays.asList(
                                         "&fOpen server links and check",
                                         "&fMedia rank requirements.",
                                         "",
